javascript_versioned_docs/version-0.30.x/reference/connection-config.mdx
---
sidebar_position: 2
---

# Connection Config

| Property name   | Data type | Required                 | Use                                                                                                                                                                                                                      |
| --------------- | --------- | ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| authToken       | string    | Yes                      | Auth token for the particpant                                                                                                                                                                                            |
| roomName        | string    | Yes                      | Meeting name to join                                                                                                                                                                                                     |
| showSetupScreen | boolean   | No (defaults to `true`)  | Show audio / video setup screen to the participant                                                                                                                                                                       |
| autoTune        | boolean   | No (defaults to `true`)  | Dyte uses VP9 codec by default, but switches to H264/VP8 depending on participants video codec support. VP9 is a superior codec but not all browsers support it. If you disable `autoTune` Dyte will use VP8 by default. |
| useShadowDom    | boolean   | No (defaults to `false`) | Renders Dyte UI under shadow DOM                                                                                                                                                                                         |
|devicePreferences.camera.facing | string | No | Set default camera preferences. Possible values 'environment' \| 'user' |